@startuml Member3_ChatList_GroupChat

skinparam linetype ortho
skinparam entity {
    BackgroundColor #FEFECE
    BorderColor #333333
    FontSize 12
}
skinparam title {
    FontSize 18
    FontStyle bold
}

title **Thành viên 3** – Danh sách chat & Chat nhóm

' ===========================
' BẢNG CHÍNH (QUẢN LÝ TRỰC TIẾP)
' ===========================

entity "chat_rooms" as chat_rooms #DDA0DD {
    * **id** : BIGINT <<PK, AUTO_INCREMENT>>
    --
    name : VARCHAR <<NULLABLE>>
    avatar_id : BIGINT <<FK → attachments>>
    * type : INT <<ENUM>>
    created_on : TIMESTAMP <<AUTO>>
    --
    Giá trị type:
    0 = DUO
    1 = **GROUP** ← Chat nhóm
    2 = AI_BOT
    --
    📌 Tạo nhóm chat (type = GROUP)
    📌 Đổi tên nhóm (name)
    📌 Đổi ảnh nhóm (avatar_id)
    📌 Giải tán nhóm (xóa room)
    📌 Hiển thị danh sách cuộc trò chuyện
}

entity "chat_room_members" as members #DDA0DD {
    * **chat_room_id** : BIGINT <<PK, FK → chat_rooms>>
    * **user_id** : BIGINT <<PK, FK → users>>
    --
    Bảng join ManyToMany
    --
    📌 Thêm thành viên vào nhóm
    📌 Xóa thành viên khỏi nhóm
    📌 Rời nhóm
}

entity "chat_room_member_roles" as member_roles #DDA0DD {
    * **id** : BIGINT <<PK, AUTO_INCREMENT>>
    --
    * chat_room_id : BIGINT <<FK → chat_rooms, NOT NULL>>
    * user_id : BIGINT <<FK → users, NOT NULL>>
    * is_admin : BOOLEAN <<DEFAULT FALSE>>
    * joined_at : TIMESTAMP <<NOT NULL, AUTO>>
    --
    📌 Phân quyền: admin / member
    📌 Admin: quản lý nhóm
    📌 Member: chỉ chat
    📌 Người tạo nhóm = admin đầu tiên
}

entity "chat_room_read_states" as read_states #DDA0DD {
    * **id** : BIGINT <<PK, AUTO_INCREMENT>>
    --
    * room_id : BIGINT <<FK → chat_rooms, NOT NULL>>
    * reader_id : BIGINT <<FK → users, NOT NULL>>
    * last_read_at : TIMESTAMP <<NOT NULL>>
    --
    UNIQUE(room_id, reader_id)
    --
    📌 Tính badge số tin chưa đọc
    📌 = COUNT(messages WHERE
    📌   sent_on > last_read_at)
}

entity "chat_messages" as chat_messages #DDA0DD {
    * **id** : BIGINT <<PK, AUTO_INCREMENT>>
    --
    * sender_id : BIGINT <<FK → users, NOT NULL>>
    * room_id : BIGINT <<FK → chat_rooms, NOT NULL>>
    message : TEXT <<NULLABLE>>
    * sent_on : TIMESTAMP <<NOT NULL, AUTO>>
    * status : INT <<ENUM>>
    --
    📌 Hiển thị tin nhắn cuối cùng
    📌 trong danh sách chat
    📌 Gửi / nhận tin nhắn nhóm
}

entity "pinned_conversations" as pinned #90EE90 {
    * **id** : BIGINT <<PK, AUTO_INCREMENT>>
    --
    * user_id : BIGINT <<FK → users, NOT NULL>>
    * room_id : BIGINT <<FK → chat_rooms, NOT NULL>>
    * pinned_at : TIMESTAMP <<NOT NULL, AUTO>>
    --
    UNIQUE(user_id, room_id)
    --
    📌 Ghim cuộc trò chuyện quan trọng
    📌 Sắp xếp lên đầu danh sách
    📌 🆕 Bảng mới
}

' ===========================
' BẢNG THAM CHIẾU
' ===========================

entity "users" as users #D3D3D3 {
    * **id** : BIGINT <<PK>>
    --
    * username : VARCHAR
    display_name : VARCHAR
    avatar_id : BIGINT <<FK>>
    --
    ⚙️ Tham chiếu: tìm kiếm user
    ⚙️ hiển thị thành viên nhóm
}

entity "attachments" as attachments #D3D3D3 {
    * **id** : BIGINT <<PK>>
    --
    * source : VARCHAR
    * type : INT <<ENUM>>
    --
    ⚙️ Tham chiếu: ảnh nhóm
}

entity "friendships" as friendships #D3D3D3 {
    * **id** : BIGINT <<PK>>
    --
    * user1_id : BIGINT <<FK → users>>
    * user2_id : BIGINT <<FK → users>>
    --
    ⚙️ Tham chiếu: tìm kiếm bạn bè
}

' ===========================
' QUAN HỆ
' ===========================

members }o--|| chat_rooms : "chat_room_id"
members }o--|| users : "user_id"

member_roles }o--|| chat_rooms : "chat_room_id"
member_roles }o--|| users : "user_id"

chat_messages }o--|| chat_rooms : "room_id"
chat_messages }o--|| users : "sender_id"

read_states }o--|| chat_rooms : "room_id"
read_states }o--|| users : "reader_id"

pinned }o--|| users : "user_id"
pinned }o--|| chat_rooms : "room_id"

chat_rooms }o..o| attachments : "avatar_id"

friendships }o--|| users : "user1_id"
friendships }o--|| users : "user2_id"

' ===========================
' LEGEND
' ===========================

legend right
    |= Màu |= Ý nghĩa |
    | <#DDA0DD> | Bảng quản lý trực tiếp |
    | <#90EE90> | Bảng mới cần tạo |
    | <#D3D3D3> | Bảng tham chiếu (đọc) |
    |= Tính năng |= Query |
    | Danh sách chat | chat_rooms JOIN members |
    | Tin cuối cùng | MAX(sent_on) FROM chat_messages |
    | Badge chưa đọc | COUNT WHERE sent_on > last_read_at |
    | Tìm kiếm | LIKE trên users, chat_rooms |
endlegend

@enduml
